# libomrx

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.api  Doxyfile.api.in  Doxyfile.internal  Makefile  libomrx.c  libomrx.pc.in  omrx.h  test1.c  test_write.c
apps/: CMakeLists.txt  test_read.c  test_write.c
include/: omrx.h
libomrx/: libomrx.c
misc/: Doxyfile.internal.in  libomrx-config.cmake.in
python/: libomrx_build.py  omrx.py  test_read.py
spec/: fop.xconf  omrx_spec.xml
spec/xsl/: pdf.xsl  titlepage.templates.xml  titlepage.templates.xsl
src/: context.c  libomrx.c  mesh.c  model.c  omrx_internal.h
